--- a/docs/css/photo.css
+++ b/docs/css/photo.css
@@ -6,9 +6,9 @@
 	margin-bottom: 70px;
 }
 
-.photo img{
+/*.photo img{
 	display: none;
-}
+}*/
 
 .instafeed {
 	width: 640px;
@@ -18,9 +18,9 @@
 	opacity: 0;
 }
 
-.instafeed a {
+/*.instafeed a {
 	display: none;
-}
+}*/
 
 .shadowed {
 	opacity: 1;
